--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 			<header id="header">
 				<div class="inner">
 					<a class="image avatar"><img src="images/bd8ac519-9229-46f8-837a-2e1fb7d65278.webp" alt="" /></a>
-					<h1><strong>Nathan Gonzalez</strong><br />
-					Third-Year PhD Student<br />
-					University of Central Florida<br />
-					Standing on the shoulders of giants.
-					</h1>
+					<h1><strong>Nathan Gonzalez</strong></h1>
+					<h1>Third-Year PhD Student</h1>
+					<h1>University of Central Florida</h1>
+					<h1>Standing on the shoulders of giants.</h1> 
 				</div>
 			</header>
 
