--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<section id="one">
 						<h2>About me</h2>
 						<p>Hello, I'm Nathan Gonzalez, a third-year Ph.D. student specializing in Big Data Analytics at the University of Central Florida. My academic journey, coupled with hands-on experience in data science and machine learning, drives my passion for uncovering insights and developing innovative solutions to complex problems. </p>
-						<p>My educational career has equipped me with profound knowledge and hands-on experience in data science. I've undertaken numerous complex projects, extracting crucial insights and providing data-driven recommendations. Through my research and professional work, I aim to push the boundaries of technology, contributing to advancements that have a meaningful impact on society. My goal is to continue exploring the potential of data science and machine learning in solving real-world problems. Below are a few of my research interests:</p>
+						<p>I've undertaken numerous complex projects, extracting crucial insights and providing data-driven recommendations. Through my research and professional work, I aim to push the boundaries of technology, contributing to advancements that have a meaningful impact on society. My goal is to continue exploring the potential of data science and machine learning in solving real-world problems. Below are a few of my research interests:</p>
 						<p> <ul>
 							<li>Natural Language Processing (NLP): Exploring the capabilities of NLP and Large Language Models (LLM).</li>
 							<li>Machine Learning: Crafting and refining algorithms for predictive modeling and data analysis.</li>
