--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a class="image fit"></aclass><img src="images/Screenshot_movies.png" alt="" /></a>
-								<h3><a href="https://github.com/gonzaleznathan/Portfolio/tree/main/Movie%20Recomendation%20System"> Movie Recomendation System </a></h3>
+								<h3><a href="https://github.com/gonzaleznathan/Portfolio/tree/main/Movie%20Recommendation%20System"> Movie Recommendation System </a></h3>
 								<p>Leveraged Python to analyze 80,000 movie ratings and employed machine learning algorithms to recommend movies to users based on their previous ratings.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
