--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a class="image avatar"><img src="images/bd8ac519-9229-46f8-837a-2e1fb7d65278.webp" alt="" /></a>
 					<h1><strong>Nathan Gonzalez</strong></h1>
-					<h1>Third-Year PhD Student</h1>
+					<h1>Fourth-Year PhD Student</h1>
 					<h1>University of Central Florida</h1>
 					<h1>Standing on the shoulders of giants.</h1> 
 				</div>
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section id="one">
 						<h2>About me</h2>
-						<p>Hello, I'm Nathan Gonzalez, a third-year Ph.D. student specializing in Big Data Analytics at the University of Central Florida. My academic journey, coupled with hands-on experience in data science and machine learning, drives my passion for uncovering insights and developing innovative solutions to complex problems. </p>
+						<p>Hello, I'm Nathan Gonzalez, a fourth-year Ph.D. student specializing in Big Data Analytics at the University of Central Florida. My academic journey, coupled with hands-on experience in data science and machine learning, drives my passion for uncovering insights and developing innovative solutions to complex problems. </p>
 						<p>I've undertaken numerous complex projects, extracting crucial insights and providing data-driven recommendations. Through my research and professional work, I aim to push the boundaries of technology, contributing to advancements that have a meaningful impact on society. My goal is to continue exploring the potential of data science and machine learning in solving real-world problems. Below are a few of my research interests:</p>
 						<p> <ul>
 							<li>Natural Language Processing (NLP): Exploring the capabilities of NLP and Large Language Models (LLM).</li>
