--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
 				<!-- Three -->
 				<section id="three">
 				    <h2>Current Research</h2>
-				    <p>As a <strong>Ph.D. Candidate in Big Data Analytics at the University of Central Florida</strong>, my research focuses on <strong>Natural Language Processing (NLP), Large Language Models (LLMs), and their applications in large-scale network analysis</strong>. My work explores advanced methodologies for identifying relationships within unstructured text-based datasets, such as <strong>social networks, recommender systems, and AI-driven decision processes</strong>.</p>
+				    <p>As a Ph.D. Candidate in Big Data Analytics at the University of Central Florida, my research focuses on Natural Language Processing (NLP), Large Language Models (LLMs), and their applications in large-scale network analysis. My work explores advanced methodologies for identifying relationships within unstructured text-based datasets, such as social networks, recommender systems, and AI-driven decision processes.</p>
 				
-				    <p>A key development in my research involves optimizing edge proposal strategies by leveraging <strong>self-attention mechanisms, transformer models, and statistical modeling</strong>. By comparing transformer-based approaches to traditional NLP methods such as <strong>Latent Dirichlet Allocation (LDA), K-Nearest Neighbors (KNN), and Cosine Similarity</strong>, my findings demonstrate that deep learning-based models significantly improve <strong>relationship inference accuracy, scalability, and computational efficiency</strong>.</p>
+				    <p>A key development in my research involves optimizing edge proposal strategies by leveraging self-attention mechanisms, transformer models, and statistical modeling. By comparing transformer-based approaches to traditional NLP methods such as Latent Dirichlet Allocation (LDA), K-Nearest Neighbors (KNN), and Cosine Similarity, my findings demonstrate that deep learning-based models significantly improve relationship inference accuracy, scalability, and computational efficiency.</p>
 				
-				    <p>These advancements contribute to broader fields such as <strong>graph learning, AI-driven optimization, and high-performance computing</strong>. I am eager to collaborate with industry professionals to explore real-world applications of these methods, from improving recommender systems to refining AI-driven market predictions.</p>
+				    <p>These advancements contribute to broader fields such as graph learning, AI-driven optimization, and high-performance computing. I am eager to collaborate with industry professionals to explore real-world applications of these methods, from improving recommender systems to refining AI-driven market predictions.</p>
 				</section>
+
 
 
 				<!-- Three -->
