--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 							<li>Natural Language Processing (NLP): Exploring the capabilities of NLP and Large Language Models (LLM).</li>
 							<li>Machine Learning: Crafting and refining algorithms for predictive modeling and data analysis.</li>
 							<li>Data Science: Utilizing statistical and computational techniques to extract valuable insights from data.</li>
+							<li>Thematic Networks & LLM-Driven Market Analysis: Investigating how Large Language Models can identify emerging financial trends to enhance stock prediction strategies.</li>
 							<li>Human-Computer Interaction: Improving user experiences through advanced data-driven methods.</li>
 						  </ul> </p>
 					</section>
