--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a class="image avatar"><img src="images/bd8ac519-9229-46f8-837a-2e1fb7d65278.webp" alt="" /></a>
 					<h1><strong>Nathan Gonzalez</strong></h1>
-					<h1>PhD Candidate</h1>
+					<h1>Ph.D. Candidate</h1>
 					<h1>University of Central Florida</h1>
 					<h1>Standing on the shoulders of giants.</h1> 
 				</div>
@@ -86,7 +86,7 @@
 				    <h2>Current Research</h2>
 				    <p>As a Ph.D. Candidate in Big Data Analytics at the University of Central Florida, my research focuses on Natural Language Processing (NLP), Large Language Models (LLMs), and their applications in large-scale network analysis. My work explores advanced methodologies for identifying relationships within unstructured text-based datasets, such as social networks, recommender systems, and AI-driven decision processes.</p>
 				
-				    <p>A key development in my research involves optimizing edge proposal strategies by leveraging self-attention mechanisms, transformer models, and statistical modeling. By comparing transformer-based approaches to traditional NLP methods such as Latent Dirichlet Allocation (LDA), K-Nearest Neighbors (KNN), and Cosine Similarity, my findings demonstrate that deep learning-based models significantly improve relationship inference accuracy, scalability, and computational efficiency.</p>
+				    <p>A key development in my research involves optimizing edge proposal strategies by leveraging self-attention mechanisms, transformer models, and statistical modeling. By comparing transformer-based approaches to traditional NLP methods such as Latent Dirichlet Allocation (LDA), K-Nearest Neighbors (KNN), and Cosine Similarity, my findings demonstrate that deep learning-based models significantly improve relationship inference accuracy, scalability, and efficiency.</p>
 				
 				    <p>These advancements contribute to broader fields such as graph learning, AI-driven optimization, and high-performance computing. I am eager to collaborate with industry professionals to explore real-world applications of these methods, from improving recommender systems to refining AI-driven market predictions.</p>
 				</section>
